alteração no arquivo

--- a/parque-estadual/index.html
+++ b/parque-estadual/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-
+    
     <div>
         <h1>PARQUE ESTADUAL ILHA BELA.</h1>
-        <img src="parque-ilha-bela.jpg" alt="Imagem">
+        <img src="img/parque-ilha-bela.jpg" alt="IMG">
         <h2>O lugar ideal para momentos inesquecíveis.</h2>
         <p>Fundado em 1992, o parque é o lugar ideal para você desfrutar ótimos momentos. Anualmente 2 milhões de visitantes passam pelo parque para conhecer o local.<br> Veja o que o parque oferece:</p>
     </div>
